# auto-research

./: .gitignore  Justfile  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
docs/: design.md
features/: autoresearch.feature  environment.py  types.py
features/steps/: autoresearch_steps.py
specs/2026-03-28-01-autoresearch-v01/: design.md  tasks.md
specs/2026-03-28-01-autoresearch-v01/features/: autoresearch.feature
src/autoresearch/: __init__.py  cli.py
src/autoresearch/adapters/: __init__.py  host_detect.py  mcp_server.py
src/autoresearch/agents/: __init__.py  base.py  fact_checker.py  planner.py  reader.py  searcher.py  synthesizer.py
src/autoresearch/config/: __init__.py  loader.py  schema.py  sod.py
src/autoresearch/engine/: __init__.py  factory.py  io.py  memory.py  state.py  workflow.py
src/autoresearch/models/: __init__.py  agent_outputs.py  task.py  types.py
src/autoresearch/templates/: __init__.py
tests/: test_agents.py  test_checkout.py  test_checkout_properties.py  test_cli.py  test_cli_status.py  test_config_loader.py  test_config_properties.py  test_config_schema.py  test_core.py  test_fact_checker.py  test_host_detect.py  test_integration.py  test_mcp_server.py  test_memory.py  test_models.py  test_planner.py  test_reader.py  test_searcher.py  test_sod.py  test_state_machine.py  test_state_properties.py  test_synthesizer.py  test_validate_full.py  test_web_search.py  test_workflow.py  test_workflow_files.py
workflows/: deep-research.yaml  fact-check-only.yaml  quick-scan.yaml
(+5 files in other folders)
